Correcciones en cors